# LabTritset

./: CMakeLists.txt  main.cpp  test.cpp  tritset.cpp  tritset.h
